# sinkhorn

./: README.md  pyproject.toml  requirements.txt  sinkhorn.py
